; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_crypto.c_test_AES_CTRCBC_pwr8.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_crypto.c_test_AES_CTRCBC_pwr8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"pwr8\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"Test AES CTR/CBC-MAC pwr8: UNAVAILABLE\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_AES_CTRCBC_pwr8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_AES_CTRCBC_pwr8() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @br_aes_pwr8_ctrcbc_get_vtable()
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @test_AES_CTRCBC_inner(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %6)
  br label %10

8:                                                ; preds = %0
  %9 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32* @br_aes_pwr8_ctrcbc_get_vtable(...) #1

declare dso_local i32 @test_AES_CTRCBC_inner(i8*, i32*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
